<resources>
    <string name="app_name">MoneyKeeper</string>

    <string name="main">Main</string>
    <string name="menu_balance_item_group_categories">Group by categories</string>

    <string name="nav_drawer_close">Close</string>
    <string name="nav_drawer_open">Open</string>

    <string name="nav_item_balance">Balance</string>
    <string name="nav_item_camera">Camera</string>
    <string name="nav_item_report">Report</string>
    <string name="nav_item_settings">Settings</string>

    <string name="pref_header_title_accounts">Accounts</string>
    <string name="pref_header_summary_accounts">Cash, credit cards, deposits, …</string>
    <string name="pref_header_title_categories">Categories</string>
    <string name="pref_header_summary_categories">Cash accounting categories</string>
    <string name="pref_header_title_default_currency">Default currency</string>
    <string name="pref_header_summary_default_currency">Choose default currency</string>
    <string name="pref_dialog_title_default_currency">Choose default currency</string>
    <string name="pref_key_default_currency">default_currency</string>

    <string name="title_account">Account</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_account_edit">Edit account</string>
    <string name="title_balance">Balance</string>
    <string name="title_categories">Categories</string>
    <string name="title_input">Input</string>
    <string name="title_report">Report</string>
    <string name="title_settings">Settings</string>
    <string name="title_category_edit">Edit category</string>
    <string name="title_total">Total</string>
    <string name="title_income">Income</string>
    <string name="title_outcome">Outcome</string>


    <string name="menu_nav_drawer_item_camera">Camera</string>
    <string name="menu_nav_drawer_item_settings">Settings</string>
    <string name="menu_nav_drawer_item_balance">Balance</string>
    <string name="menu_nav_drawer_item_accounts">Accounts</string>
    <string name="menu_nav_drawer_item_categories">Categories</string>
    <string name="menu_input_item_camera">Camera</string>
    <string name="menu_categories_item_add">Add category</string>
    <string name="menu_accounts_item_add">Add account</string>
    <string name="menu_account_edit_item_save">Save</string>
    <string name="menu_category_edit_item_save">Save</string>

    <string name="label_account_name">Account name</string>
    <string name="label_category_name">Category name</string>

    <string name="err_msg_account_name">Invalid account name</string>
    <string name="err_msg_category_name">Invalid category name</string>

    <string name="label_account_currency">Account currency</string>
    <string name="menu_input_item_save">Save</string>
</resources>
