<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:fragment="budny.moneykeeper.view.activities.ActivitySettings$FragmentAccountsPreferences"
        android:title="@string/pref_header_title_accounts"
        android:summary="@string/pref_header_summary_accounts"
        android:icon="@drawable/ic_account_balance_wallet_24dp">
    </PreferenceScreen>

    <PreferenceScreen
        android:fragment="budny.moneykeeper.view.activities.ActivitySettings$FragmentCategoriesPreferences"
        android:title="@string/pref_header_title_categories"
        android:summary="@string/pref_header_summary_categories"
        android:icon="@drawable/ic_assignment_24dp">
    </PreferenceScreen>

    <ListPreference
        android:dialogTitle="@string/pref_dialog_title_default_currency"
        android:key="@string/pref_key_default_currency"
        android:summary="@string/pref_header_summary_default_currency"
        android:title="@string/pref_header_title_default_currency"
        android:icon="@drawable/ic_attach_money_24dp"/>
</PreferenceScreen>