<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_nav_drawer_item_balance"
        android:icon="@drawable/ic_graph_24dp"
        android:title="@string/title_balance" />
    <item
        android:id="@+id/menu_nav_drawer_item_accounts"
        android:icon="@drawable/ic_account_balance_wallet_24dp"
        android:title="@string/title_accounts" />
    <item
        android:id="@+id/menu_nav_drawer_item_categories"
        android:icon="@drawable/ic_categories_24dp"
        android:title="@string/title_categories" />
    <item
        android:id="@+id/menu_nav_drawer_item_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/menu_nav_drawer_item_camera"
        android:icon="@drawable/ic_camera_black_24dp"
        android:title="@string/title_camera" />
</menu>