<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <header
        android:fragment="budny.moneykeeper.view.activities.ActivitySettings$Prefs1Fragment"
        app:icon="@drawable/ic_account_balance_wallet_black"
        android:title="@string/pref_header_title_accounts"
        android:summary="@string/pref_header_summary_accounts" />

    <header
        android:fragment="budny.moneykeeper.view.activities.ActivitySettings$Prefs1Fragment"
        app:icon="@drawable/ic_assignment_black"
        android:title="@string/pref_header_title_categories"
        android:summary="@string/pref_header_summary_categories" />

    <header
        android:fragment="budny.moneykeeper.view.activities.ActivitySettings$Prefs2Fragment"
        app:icon="@drawable/ic_euro_symbol_black"
        android:title="@string/pref_header_title_default_currency"
        android:summary="@string/pref_header_summary_default_currency" />

    <!--<header android:fragment="budny.moneykeeper.view.activities.ActivitySettings$Prefs1Fragment"-->
        <!--android:icon="@drawable/ic_add_white"-->
        <!--android:title="Prefs 1"-->
        <!--android:summary="An example of some preferences." />-->

    <!--<header android:fragment="budny.moneykeeper.view.activities.ActivitySettings$Prefs2Fragment"-->
        <!--android:icon="@drawable/ic_add_white"-->
        <!--android:title="Prefs 2"-->
        <!--android:summary="Some other preferences you can see.">-->
        <!--&lt;!&ndash; Arbitrary key/value pairs can be included with a header as-->
             <!--arguments to its fragment. &ndash;&gt;-->
        <!--<extra android:name="someKey" android:value="someHeaderValue" />-->
    <!--</header>-->

    <!--<header android:icon="@drawable/ic_add_white"-->
        <!--android:title="Intent"-->
        <!--android:summary="Launches an Intent.">-->
        <!--<intent android:action="android.intent.action.VIEW"-->
            <!--android:data="http://www.android.com" />-->
    <!--</header>-->

</preference-headers>